--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <title>Chat with MyBot</title>
 </head>
 <body>
-<h1>Welcome to the Chatbot</h1>
+<h1>Chatbot</h1>
 
 <!-- Dialogflow Messenger Embed -->
-<iframe
-    allow="microphone;"
-    width="350"
-    height="430"
-    src="https://console.dialogflow.com/api-client/demo/embedded/ecd452e6-f5d0-4a79-a88b-aaeb5b6ef1ad">
-</iframe>
+<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+        intent="WELCOME"
+        chat-title="gender_chatbot"
+        agent-id="ecd452e6-f5d0-4a79-a88b-aaeb5b6ef1ad"
+        language-code="en"
+></df-messenger>
 </body>
 </html>
