--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
 
   <header>
     <h1>Chat with StyleBot</h1>
+    <div style="display: flex; align-items: center; margin-top: 8px;">
+      <span style="font-size: 18px; margin-right: 8px;">ℹ️</span>
+      <p style="margin: 0; font-size: 15px; color: #f0f8ff;">
+        For the best experience, please respond using the provided options (e.g., event type, weather, clothing preferences).
+      </p>
+    </div>
   </header>
 
   <main>
