--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
   <main>
     <!-- Dialogflow Messenger Embed -->
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+    <!-- Replace agent-id with your own agent-id -->
     <df-messenger
         intent="WELCOME"
         chat-title="StyleBot"
